--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.3.3
   shimmer: ^3.0.0
   flutter_local_notifications: ^18.0.1
+  flutter_background_service: ^5.0.10
+  flutter_email_sender: ^6.0.3
 
 dev_dependencies:
   flutter_test:
