Fixed type infering on CustomDropDown

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   flutter_background_service: ^5.0.10
   flutter_email_sender: ^6.0.3
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
