--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.0+10
+version: 2.0.0+11
 environment:
   sdk: ^3.8.1
   
@@ -50,6 +50,7 @@ dependencies:
   flutter_email_sender: ^6.0.3
   table_calendar: ^3.2.0
   sentry_flutter: ^9.6.0
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
